--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,7 @@ ul {
   color: #2e2f42;
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover {
@@ -155,6 +156,7 @@ ul {
   color: #434455;
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-link:hover {
   color: #404bbf;
@@ -169,6 +171,10 @@ ul {
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
+}
+
+.footer-container {
+  display: flex;
 }
 
 .footer-studio-color {
@@ -194,6 +200,15 @@ ul {
 .hero-section {
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-background.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 .hero-head {
@@ -229,6 +244,7 @@ ul {
   margin: 0 auto;
   min-width: 169px;
   height: 56px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .studio-hero-button:hover {
@@ -252,6 +268,13 @@ ul {
 
 .about-us-item {
   flex-basis: calc((100% - 24px * 3) / 4);
+}
+
+.about-us-box {
+  width: 100%;
+  min-height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
 }
 
 .about-us-head {
@@ -342,6 +365,37 @@ ul {
   color: #434455;
 }
 
+/* ---------------Studio Customers---------------*/
+
+.customers-section {
+  padding-top: 120px;
+}
+
+.customers-head {
+  font-size: 36px;
+  line-height: 1.11;
+
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+
+  color: #2e2f42;
+}
+
+.customers-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.customers-item {
+  width: calc((100% - 5 * 24px) / 6);
+  min-height: 88px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+}
+
 /* ---------------Poertfolio Page---------------*/
 
 .portfolio-main-section {
@@ -368,12 +422,14 @@ ul {
   padding: 12px 24px;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-filter-button:hover {
   color: #ffffff;
   background-color: #404bbf;
-  border-radius: 4px;
   border: 1px solid transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -419,4 +475,22 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+}
+
+/* ---------------Additional stylization---------------*/
+
+.current {
+  position: relative;
+  color: #404bbf;
+}
+
+.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
