--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ ul {
 
 .footer-container {
   display: flex;
+  gap: 120px;
 }
 
 .footer-studio-color {
@@ -193,6 +194,51 @@ ul {
   color: #f4f4fd;
   width: 100%;
   max-width: 264px;
+}
+
+.footer-social-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.footer-social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  min-width: calc((100% - 16 * 3) / 4);
+}
+
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-social-link span {
+  min-width: 100%;
+  min-height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-icon {
+  fill: #f4f4fd;
+}
+
+.footer-social-link:hover span {
+  background-color: #31d0aa;
+}
+
+.footer-social-link:focus span {
+  background-color: #31d0aa;
 }
 
 /* -----------------Studio Hero-----------------*/
@@ -275,6 +321,15 @@ ul {
   min-height: 112px;
   background-color: #f4f4fd;
   border-radius: 4px;
+  position: relative;
+}
+
+.about-us-icon {
+  position: absolute;
+  right: 3.35%;
+  bottom: 0%;
+  left: 100px;
+  top: 24px;
 }
 
 .about-us-head {
@@ -345,6 +400,45 @@ ul {
 .our-team-item {
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.our-team-contacts {
+  max-width: 232px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  margin: 8px 16px 32px 16px;
+}
+
+.our-team-contact {
+  width: 40px;
+  height: 40px;
+}
+
+.our-team-link span {
+  min-width: 100%;
+  min-height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.our-team-link:hover span {
+  background-color: #404bbf;
+}
+
+.our-team-link:focus span {
+  background-color: #404bbf;
+}
+
+.our-team-icon {
+  fill: #f4f4fd;
 }
 
 .our-team-subhead {
@@ -394,6 +488,36 @@ ul {
   min-height: 88px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-link {
+  color: #8e8f99;
+  display: block;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.customers-link span {
+  position: relative;
+}
+
+.customers-icon {
+  fill: currentColor;
+  position: absolute;
+  left: 32px;
+  top: 16px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-link:hover .customers-icon,
+.customers-link:focus .customers-icon {
+  fill: #404bbf;
+}
+
+.customers-item:hover,
+.customers-item:focus {
+  border: 1px solid #404bbf;
 }
 
 /* ---------------Poertfolio Page---------------*/
