--- a/css/styles.css
+++ b/css/styles.css
@@ -567,10 +567,6 @@ ul {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-project-item {
-  width: calc((100% - 48px) / 3);
-}
-
 .portfolio-project-wrap {
   display: flex;
   flex-wrap: wrap;
@@ -579,10 +575,62 @@ ul {
   row-gap: 48px;
 }
 
+.portfolio-project-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-project-link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-project-link:hover,
+.portfolio-project-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-project-link:hover .overlay-text-wrap {
+  transform: translate(0);
+}
+
+.portfolio-project-link:focus .overlay-text-wrap {
+  transform: translate(0);
+}
+
+.overlay-block {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay-text-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+
+  min-height: 300px;
+  min-width: 360px;
+  padding: 40px 32px;
+  padding-bottom: auto;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
 .portfolio-item-wrap {
   border: 1px solid #e7e9fc;
   border-top: none;
   padding: 32px 16px;
+  max-width: 360px;
 }
 
 .portfolio-project-subhead {
@@ -617,4 +665,59 @@ ul {
   height: 4px;
   background-color: #404bbf;
   border-radius: 2px;
+}
+
+/* ---------------Hero Modal Window---------------*/
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  z-index: 200;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  width: 408px;
+  min-height: 584px;
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+
+.modal-button {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
