--- a/css/styles.css
+++ b/css/styles.css
@@ -502,7 +502,8 @@ ul {
   height: 100%;
   border: 1px solid #8e8f99;
   border-radius: 4px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   display: flex;
   justify-content: center;
@@ -511,23 +512,16 @@ ul {
 
 .customers-icon {
   fill: currentColor;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.customers-link:hover .customers-icon {
-  fill: #404bbf;
-}
-
-.customers-link:focus .customers-icon {
-  fill: #404bbf;
 }
 
 .customers-link:hover {
   border: 1px solid #404bbf;
+  color: #404bbf;
 }
 
 .customers-link:focus {
   border: 1px solid #404bbf;
+  color: #404bbf;
 }
 
 /* ---------------Poertfolio Page---------------*/
@@ -616,9 +610,6 @@ ul {
 .overlay-block {
   position: relative;
   overflow: hidden;
-}
-
-.overlay-text-wrap {
 }
 
 .overlay-text {
