--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,7 @@ ul {
   background-color: #2e2f42;
   padding: 188px 0;
   max-width: 1440px;
+  margin: 0 auto;
 
   background-image: linear-gradient(
       to bottom,
@@ -502,7 +503,8 @@ ul {
   height: 100%;
   border: 1px solid #8e8f99;
   border-radius: 4px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   display: flex;
@@ -515,12 +517,12 @@ ul {
 }
 
 .customers-link:hover {
-  border: 1px solid #404bbf;
+  border-color: #404bbf;
   color: #404bbf;
 }
 
 .customers-link:focus {
-  border: 1px solid #404bbf;
+  border-color: #404bbf;
   color: #404bbf;
 }
 
